# WildOS_ZYL

./: .gitignore
install/direct_lidar_inertial_odometry/lib/direct_lidar_inertial_odometry/: dlio_map_node  dlio_odom_node
install/direct_lidar_inertial_odometry/share/direct_lidar_inertial_odometry/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/dlio_gazebo_sim/lib/dlio_gazebo_sim/: circle_cmd  gazebo_cloud_adapter  gazebo_odom_tf  grid_threshold_markers  nav_graph_markers  odom_cloud_to_lidar_frame  synthetic_dlio_sensors
install/dlio_gazebo_sim/share/dlio_gazebo_sim/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/dlio_gazebo_sim/share/dlio_gazebo_sim/config/: dlio_gazebo_extrinsics.yaml  dlio_oxford_spires_rosbag.yaml
install/dlio_gazebo_sim/share/dlio_gazebo_sim/launch/: sim_dlio.launch.py
install/dlio_gazebo_sim/share/dlio_gazebo_sim/models/dlio_car/: model.config  model.sdf
install/dlio_gazebo_sim/share/dlio_gazebo_sim/worlds/: dlio_empty.sdf  dlio_room.sdf
install/elevation_map_msgs/share/elevation_map_msgs/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/elevation_mapping_cupy/lib/elevation_mapping_cupy/: elevation_mapping_node.py  synthetic_pointcloud_tf_publisher.py
log/: latest_build
src/direct_lidar_inertial_odometry-feature-ros2/cfg/: dlio.yaml
src/direct_lidar_inertial_odometry-feature-ros2/launch/: dlio.launch.py  dlio.rviz
src/dlio_gazebo_sim/: package.xml  setup.cfg  setup.py
src/dlio_gazebo_sim/config/: dlio_gazebo_extrinsics.yaml  dlio_go2_livox_rosbag.yaml  dlio_oxford_spires_rosbag.yaml  nav2_dlio_gazebo.yaml
src/dlio_gazebo_sim/dlio_gazebo_sim/: circle_cmd.py  gazebo_cloud_adapter.py  gazebo_odom_tf.py  goal_pose_to_nav2_action.py  grid_threshold_markers.py  initial_goal_mux.py  livox_imu_adapter.py  odom_cloud_to_lidar_frame.py  static_path_publisher.py  synthetic_dlio_sensors.py  traversability_costmap.py
src/dlio_gazebo_sim/launch/: nav2_dlio_navigation.launch.py  sim_dlio.launch.py
src/dlio_gazebo_sim/worlds/: dlio_empty.sdf  dlio_room.sdf  dlio_score_ring_test.sdf
src/nebula2-wildos-main/explorfm/: explorfm_model.py
src/nebula2-wildos-main/graaf_vendor/: CMakeLists.txt  package.xml
src/nebula2-wildos-main/graaf_vendor/include/graaflib/: graph.h
src/nebula2-wildos-main/graaf_vendor/include/graaflib/algorithm/shortest_path/: dijkstra_shortest_path.h
src/nebula2-wildos-main/graphnav_builder/: package.xml  setup.cfg  setup.py
src/nebula2-wildos-main/graphnav_planner/: CMakeLists.txt
src/nebula2-wildos-main/visual_navigation/: setup.py
src/wildos_rosbag_bridge/: package.xml  setup.cfg  setup.py
src/wildos_rosbag_bridge/launch/: alphasense_to_wildos.launch.py
src/wildos_rosbag_bridge/wildos_rosbag_bridge/: alphasense_to_wildos.py
(+430 files in other folders)
